--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,7 +3,7 @@ FROM  public.ecr.aws/docker/library/node:18.14.2-alpine3.17
 ARG REACT_APP_MOVIE_API_URL
 ENV REACT_APP_MOVIE_API_URL=${REACT_APP_MOVIE_API_URL}
 
-WORKDIR /app
+WORKDIR /movie-picture-pipeline-project
 
 # Copy dependdency files
 COPY package*.json ./
