--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -48,7 +48,7 @@ jobs:
       # Run the linter.
       - run: cd frontend && npm run lint
       
-      REACT_APP_MOVIE_API_URL=http://localhost:5000 npm start
+      - run: REACT_APP_MOVIE_API_URL=http://localhost:5000 npm start
       
       - run: cd frontend && docker build --build-arg=REACT_APP_MOVIE_API_URL=http://localhost:5000 --tag=mp-frontend:latest .
       - run: cd frontend && docker run --name mp-frontend -p 3000:3000 -d mp-frontend
