--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -54,6 +54,14 @@ jobs:
         run: |
           docker stop mp-frontend || true
           docker rm mp-frontend || true
+          
+      # Stop and remove any existing container using port 3000
+      - name: Identify and free up port 3000
+        run: |
+          if [ "$(docker ps -q -f publish=3000)" ]; then
+            docker stop $(docker ps -q -f publish=3000)
+            docker rm $(docker ps -q -f publish=3000)
+          fi
       
       - run: cd frontend && docker build --build-arg=REACT_APP_MOVIE_API_URL=http://localhost:5000 --tag=mp-frontend:latest .
       - run: cd frontend && docker run --name mp-frontend -p 3000:3000 -d mp-frontend
