--- a/.github/workflows/backend-workflow.yml
+++ b/.github/workflows/backend-workflow.yml
@@ -18,41 +18,33 @@ on:
 #Use a matrix strategy to use Node.js versions 16.x and 18.x
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        #node-version: [16.x, 18.x]
-        node-version: [18.18.0]
-
     steps:
-      # Check out the code from the repository.
-      - uses: actions/checkout@v3
+      # Check out the code from the repository
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      # Set up a Node.js environment using the specified node version.
-      - uses: actions/setup-node@v3
+      # Set up Python (specify your Python version here)
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          node-version: ${{ matrix.node-version }}
-          
-      - name: Init json package
-        run: npm init -y
+          python-version: '3.9' # Use the Python version that you need
 
-      # Install the dependencies.
-      - name: Install dependencies
-        run: cd backend && pipenv install
-      
-      # Run the tests.
-      # - name: Running tests
-        # run: cd frontend && npm test
-          
-      # Run the linter.
-      # - run: cd frontend && npm run lint
+      # Install pipenv
+      - name: Install Pipenv
+        run: |
+          python -m pip install --upgrade pip
+          pip install pipenv
 
-      # Build and Run docker image
-      # - run: cd frontend && docker build --build-arg=REACT_APP_MOVIE_API_URL=http://localhost:5000 --tag=mp-frontend:latest .
-      # - run: cd frontend && docker run --name mp-frontend -p 3000:3000 -d mp-frontend
+      # Run a command (e.g., lint, test, or start the application) using pipenv
+      - name: Run tests with Pipenv
+        run: |
+          cd backend
+          pipenv run test
+          pipenv run lint
 
-      # Send a console message at completion.
-      # - run: |
-          # echo "Hello ${{github.actor}}. You pushed to ${{github.repository}} at $(date)."
+      # Optional: Run the application or any other script
+      - name: Run Application
+        run: |
+          pipenv run python test_app.py
