--- a/.github/workflows/backend-workflow.yml
+++ b/.github/workflows/backend-workflow.yml
@@ -13,9 +13,8 @@ on:
       
     paths:
       # Specify paths that should trigger the workflow
-      - 'frontend/**'
+      - 'backend/**'
   
-#Use a matrix strategy to use Node.js versions 16.x and 18.x
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -31,20 +30,28 @@ jobs:
         with:
           python-version: '3.10' # Use the Python version that you need
 
-      # Install pipenv
-      - name: Install Pipenv
+      # Install pipenv and dependencies
+      - name: Install Pipenv and Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install pipenv
+          cd backend
+          pipenv install --dev  # Install all dependencies including dev dependencies
 
-      # Run a command (e.g., lint, test, or start the application) using pipenv
-      - name: Run tests with Pipenv
+      # Run tests using pytest with Pipenv
+      - name: Run tests with pytest
         run: |
           cd backend
-          pipenv run test
-          pipenv run lint
+          pipenv run pytest  # Use the pipenv environment to run pytest
+
+      # Run lint using pipenv
+      - name: Run lint with Pipenv
+        run: |
+          cd backend
+          pipenv run lint  # Ensure 'lint' is defined in Pipfile [scripts] section if needed
 
       # Optional: Run the application or any other script
-      # - name: Run Application
-        # run: |
-          # pipenv run python test_app.py
+      - name: Run Application
+        run: |
+          cd backend
+          pipenv run python -m <module_name>  # Replace <module_name> with your main module
