--- a/.github/workflows/backend-workflow.yml
+++ b/.github/workflows/backend-workflow.yml
@@ -57,6 +57,15 @@ jobs:
       # Check the running application
       # - run: curl http://localhost:5000/movies
       
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to container registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
+      
       # Deploy to kubernetes
       - name: Push to Kuberenetes
         run: |
