--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -73,15 +73,6 @@ jobs:
           aws-session-token: ${{secrets.AWS_SESSION_TOKEN}}
           aws-region: us-east-1
       
-      # - name: Set up Docker Buildx
-        # uses: docker/setup-buildx-action@v2
-
-      # - name: Login to container registry
-        # uses: docker/login-action@v2
-        # with:
-          # username: ${{ secrets.REGISTRY_USERNAME }}
-          # password: ${{ secrets.REGISTRY_PASSWORD }}
-      
       # Authenticate to Amazon ECR
       - name: Login to Amazon ECR
         id: login-ecr
@@ -91,9 +82,9 @@ jobs:
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: backend-repo
-        run: |
-          cd backend && docker build --tag mp-backend:latest .
-          docker push $REGISTRY/$REPOSITORY:mp-backend:latest
+        # run: |
+          # cd backend && docker build --tag mp-backend:latest .
+          # docker push $REGISTRY/$REPOSITORY:mp-backend:latest
      
       
       # Deploy to kubernetes
