--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -51,7 +51,7 @@ jobs:
           pipenv run lint
 
       # Build and Run docker image
-      - run: cd backend && docker build --tag mp-backend:latest .
+      - run: cd backend && docker build -t mp-backend .
       # - run: cd backend && docker run -p 5000:5000 --name mp-backend -d mp-backend
       
       # Check the running application
@@ -83,8 +83,8 @@ jobs:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: backend-repo
         run: |
-          docker build --tag mp-backend:latest .
-          docker push $REGISTRY/$REPOSITORY:mp-backend:latest
+          docker --tag $REGISTRY/$REPOSITORY:mp-backend
+          docker push $REGISTRY/$REPOSITORY:mp-backend
      
       
       # Deploy to kubernetes
