--- a/.github/workflows/frontend-cd.yml
+++ b/.github/workflows/frontend-cd.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
   
   # Automatic trigger on pull request events targeting the main branch
-  pull_request:
+  push:
     branches:
       - main
       
@@ -16,7 +16,7 @@ on:
       - 'frontend/**'
       
 env:
-  REACT_APP_MOVIE_API_URL: 'http://localhost:5000'
+  REACT_APP_MOVIE_API_URL: 'af095a2c5ed7d43bb8e1884013ed6f77-1825718870.us-east-1.elb.amazonaws.com'
   
 jobs:
   test:
