--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -115,6 +115,7 @@ jobs:
           REPOSITORY: backend-repo
           IMAGE_TAG: mp-backend-${{ github.run_number }}
         run: |
+          docker build -t mp-backend .
           docker tag mp-backend $REGISTRY/$REPOSITORY:$IMAGE_TAG
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
           
@@ -127,6 +128,7 @@ jobs:
           cd backend/k8s
           kustomize edit set image backend=$REGISTRY/$REPOSITORY:$IMAGE_TAG
           kustomize build | kubectl apply -f - 
+          sleep 10
           
       - name: Print Kubernetes Services
         run: |  
