--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -60,6 +60,21 @@ jobs:
         run: |
           cd backend
           pipenv run lint
+
+      # Build and Run docker image
+      - run: cd backend && docker build -t mp-backend .
+      
+      # Save the Docker image as a tarball
+      - name: Save Docker image as artifact
+        run: |
+          docker save mp-backend -o mp-backend.tar
+
+      # Upload the tarball as an artifact
+      - name: Upload Docker image artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: mp-backend-image
+          path: mp-backend.tar
       
   stage_deploy:
     runs-on: ubuntu-latest
@@ -80,14 +95,14 @@ jobs:
           aws-region: us-east-1
           
       # Download and load the Docker image artifact
-      # - name: Download Docker image artifact
-        # uses: actions/download-artifact@v3
-        # with:
-          # name: mp-backend-image
+      - name: Download Docker image artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: mp-backend-image
 
-      # - name: Load Docker image
-        # run: |
-          # docker load -i mp-backend.tar
+      - name: Load Docker image
+        run: |
+          docker load -i mp-backend.tar
       
       # Authenticate to Amazon ECR
       - name: Login to Amazon ECR
@@ -100,7 +115,7 @@ jobs:
           REPOSITORY: backend-repo
           IMAGE_TAG: mp-backend-${{ github.run_number }}
         run: |
-          docker build --tag $REGISTRY/$REPOSITORY:$IMAGE_TAG
+          docker tag mp-backend $REGISTRY/$REPOSITORY:$IMAGE_TAG
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
           
       - name: Update Kubeconfig
@@ -111,6 +126,7 @@ jobs:
         run: |
           cd backend/k8s
           kustomize edit set image backend=$REGISTRY/$REPOSITORY:$IMAGE_TAG
+          echo "This is backend: $backend"
           kustomize build | kubectl apply -f - 
           sleep 10
           
