--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -117,16 +117,24 @@ jobs:
         run: |
           docker tag mp-backend $REGISTRY/$REPOSITORY:$IMAGE_TAG
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+        outputs:
+          REGISTRY: ${{ env.REGISTRY }}
+          REPOSITORY: ${{ env.REPOSITORY }}
+          IMAGE_TAG: ${{ env.IMAGE_TAG }}
           
       - name: Update Kubeconfig
         run: aws eks update-kubeconfig --name movie-picture-cluster --region us-east-1
       
       # Deploy to kubernetes
       - name: Push to Kubernetes
+        env:
+          REGISTRY: ${{ steps.login-ecr.outputs.REGISTRY }}
+          REPOSITORY: ${{ steps.login-ecr.outputs.REPOSITORY }}
+          IMAGE_TAG: ${{ steps.login-ecr.outputs.IMAGE_TAG }}
         run: |
           cd backend/k8s
           kustomize edit set image backend=$REGISTRY/$REPOSITORY:$IMAGE_TAG
-          echo "This is backend: ${{env.REGISTRY}}/${{env.REPOSITORY}}:${{env.IMAGE_TAG}}"
+          echo "This is backend: $REGISTRY/$REPOSITORY:$IMAGE_TAG"
           kustomize build | kubectl apply -f - 
           sleep 10
           
