--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -110,6 +110,7 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v2
 
       - name: Build, tag, and push docker image to Amazon ECR
+        id: build-and-push
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: backend-repo
@@ -117,10 +118,6 @@ jobs:
         run: |
           docker tag mp-backend $REGISTRY/$REPOSITORY:$IMAGE_TAG
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
-        outputs:
-          REGISTRY: ${{ env.REGISTRY }}
-          REPOSITORY: ${{ env.REPOSITORY }}
-          IMAGE_TAG: ${{ env.IMAGE_TAG }}
           
       - name: Update Kubeconfig
         run: aws eks update-kubeconfig --name movie-picture-cluster --region us-east-1
@@ -128,9 +125,9 @@ jobs:
       # Deploy to kubernetes
       - name: Push to Kubernetes
         env:
-          REGISTRY: ${{ steps.login-ecr.outputs.REGISTRY }}
-          REPOSITORY: ${{ steps.login-ecr.outputs.REPOSITORY }}
-          IMAGE_TAG: ${{ steps.login-ecr.outputs.IMAGE_TAG }}
+          REGISTRY: ${{ steps.build-and-push.outputs.REGISTRY }}
+          REPOSITORY: ${{ steps.build-and-push.outputs.REPOSITORY }}
+          IMAGE_TAG: ${{ steps.build-and-push.outputs.IMAGE_TAG }}
         run: |
           cd backend/k8s
           kustomize edit set image backend=$REGISTRY/$REPOSITORY:$IMAGE_TAG
