--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -110,36 +110,22 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v2
 
       - name: Build, tag, and push docker image to Amazon ECR
-        # id: build-and-push
-        # env:
-          # REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          # REPOSITORY: backend-repo
-          # IMAGE_TAG: mp-backend-${{ github.run_number }}
-        # run: |
-          # docker tag mp-backend $REGISTRY/$REPOSITORY:$IMAGE_TAG
-          # docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
-
         env:
-            IMAGE_TAG: mp-backend-${{ github.run_number }}
-            REPO_NAME: backend-repo
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REPOSITORY: backend-repo
+          IMAGE_TAG: mp-backend-${{ github.run_number }}
         run: |
-            docker tag mp-backend ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG .
-            docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com/$REPO_NAME:$IMAGE_TAG
-          
-          
+          docker tag mp-backend $REGISTRY/$REPOSITORY:$IMAGE_TAG
+          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG          
           
       - name: Update Kubeconfig
         run: aws eks update-kubeconfig --name movie-picture-cluster --region us-east-1
       
       # Deploy to kubernetes
       - name: Push to Kubernetes
-        env:
-          REGISTRY: ${{ steps.build-and-push.outputs.REGISTRY }}
-          REPOSITORY: ${{ steps.build-and-push.outputs.REPOSITORY }}
-          IMAGE_TAG: ${{ steps.build-and-push.outputs.IMAGE_TAG }}
         run: |
           cd backend/k8s
-          kustomize edit set image backend=$REGISTRY/$REPOSITORY:$IMAGE_TAG
+          kustomize edit set image backend=425586105601.dkr.ecr.us-east-1.amazonaws.com/backend-repo:mp-backend-55
           echo "This is backend: $REGISTRY/$REPOSITORY:$IMAGE_TAG"
           kustomize build | kubectl apply -f - 
           sleep 10
