--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -127,8 +127,8 @@ jobs:
       - name: Push to Kubernetes
         run: |
           cd backend/k8s
-          kustomize edit set image backend=425586105601.dkr.ecr.us-east-1.amazonaws.com/backend-repo:mp-backend-55
-          echo "This is backend: ${{ steps.tag-push.outputs.test }}"
+          kustomize edit set image ${{ steps.login-ecr.outputs.registry }}/backend-repo:mp-backend-55
+          echo ${{ steps.tag-push.outputs.test }}
           kustomize build | kubectl apply -f - 
           sleep 10
           
