--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -118,7 +118,7 @@ jobs:
         run: |
           docker tag mp-backend $REGISTRY/$REPOSITORY:$IMAGE_TAG
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
-          test = echo $REGISTRY/$REPOSITORY:$IMAGE_TAG
+          test = $REGISTRY/$REPOSITORY:$IMAGE_TAG
           
       - name: Update Kubeconfig
         run: aws eks update-kubeconfig --name movie-picture-cluster --region us-east-1
@@ -127,7 +127,7 @@ jobs:
       - name: Push to Kubernetes
         run: |
           cd backend/k8s
-          kustomize edit set image ${{ steps.login-ecr.outputs.registry }}/backend-repo:mp-backend-55
+          kustomize edit set image backend=${{ steps.login-ecr.outputs.registry }}/backend-repo:mp-backend-55
           echo ${{ steps.tag-push.outputs.test }}
           kustomize build | kubectl apply -f - 
           sleep 10
